# kron

./: .clangd  .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: tiers.cmake
docs/command restructuring/: LIST.md
include/command/: command-implementation.hpp  command-raw-metadata.hpp
include/core-hpp/: parsing.hpp  tokenization.hpp  validator.hpp
include/error/: error-id.hpp  error-implementation.hpp  error-raw-metadata.hpp  error_hanlder.hpp
include/option/: option-implementation.hpp  option-raw-metadata.hpp
include/special-option/: help-option.hpp  version-option.hpp  version-option.hpp.in
include/token/: group-token.hpp  token-raw-metadata.hpp  type-token.hpp
src/: kron-main.cpp
src/command-register-information/: command-get-option.cpp  command-information.cpp
src/command-register-information/command-handler-include/: command-hanlder-include.hpp
src/command-register-information/command-handler-include/command-hanlder-cpp/: copy.cpp  inspect.cpp  list.cpp
src/core-system/: executor.cpp  parsing.cpp  tokenization.cpp  validator.cpp
src/error-register-information/: error-get-error.cpp  error-information.cpp  error_hanlder.cpp
src/error-register-information/handler_error/: handler_error.cpp  handler_error.hpp
src/option-register-information/: option-get-option.cpp  option-information.cpp
src/option-register-information/special-option/: help-hanldler.cpp  version-handler.cpp
tests/: CMakeLists.txt  EXECUTOR_TEST.cpp  PARSING_TEST.cpp  SPEED_TEST_LIST.cpp  TOKENIZATION_TEST.cpp  VALIDATION_TEST.cpp
